# cppTest

./: .gitignore  README - 副本.md  README.en.md  README.md
client/: aesencryptionmanager.cpp  aesencryptionmanager.h  car_manage_system.pro  car_manage_system.pro.user.704c948  carinfo.cpp  carinfo.h  carinfo.ui  clientmanage.cpp  clientmanage.h  clientmanage.ui  companyinfoview.cpp  companyinfoview.h  companyinfoview.ui  electronicinterface.cpp  electronicinterface.h  electronicinterface.ui  fixrecord.cpp  fixrecord.h  fixrecord.ui  homewidget.cpp  homewidget.h  homewidget.ui  loginsettings.cpp  loginsettings.h  loginsettings.ui  loginwidget.cpp  loginwidget.h  loginwidget.ui  main.cpp  optlogview.cpp  optlogview.h  optlogview.ui  red_ears_cpp_car_manage_system - Gitee IDE.html  register.cpp  register.h  register.ui  socket_data.h  sqliteclient.cpp  sqliteclient.h  stuffmanage.cpp  (+11 more)
client_demo/: CMakeLists.txt  client.cpp
data/: car_manage_system.sql
qss/: FontFx.qss  FontSize10.qss  FontSize15.qss  FontSize20.qss  FontSt.qss  FontWy.qss  (+3 more)
server/: .clang-format  CMakeLists.txt  car_manage_systemsql.sql  demo.ini  main.cpp  server.cpp
server/config/: platform.ini
server/opensource/jsoncpp/jsoncpp-1.9.5/: CMakeLists.txt
server/platform/include/: Ini.h  controller.h  db_util.h  ini.h  logger.h  login_controller.h  opt_log_controller.h  secure.h  server.h  socket.h  socket_data.h  user_controller.h
server/platform/src/: Ini.cpp  db_util.cpp  ini.cpp  logger.cpp  login_controller.cpp  opt_log_controller.cpp  secure.cpp  server.cpp  socket.cpp  user_controller.cpp
(+16 files in other folders)
